--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Dicee</title>
+    <title>Dicee-Game</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -20,6 +20,14 @@
       <div class="dice">
         <p>Player 2</p>
         <img class="img2" src="./images/dice6.png">
+      </div>
+
+      <div class="Refresh">
+          <p class="p">
+        <a  href="./index.html">
+        Play Again
+      </a>
+      </p>
       </div>
 
     </div>
